plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '2.7.18'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.planify'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '11'
    targetCompatibility = '11'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	providedRuntime 'org.apache.tomcat.embed:tomcat-embed-jasper'
	implementation 'javax.servlet:jstl'
	implementation 'org.springframework.boot:spring-boot-devtools'
	
	// lombok
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    implementation 'org.projectlombok:lombok:1.18.22'
    
    // H2 & JPA
	implementation 'org.springframework.boot:spring-boot-starter-jdbc' // Jdbc, Driver
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.h2database:h2' // h2 : implementation 
    
    // tiles
    implementation 'org.apache.tiles:tiles-core:3.0.8'
    implementation 'org.apache.tiles:tiles-api:3.0.8'
    implementation 'org.apache.tiles:tiles-jsp:3.0.8'
    
}

tasks.named('test') {
	useJUnitPlatform()
}
